kubernetes-networks/.canary/canary-svc-cip.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-svc-cip
spec:
  selector:
    app: canary
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
